--- a/Apps/login/templates/index.html
+++ b/Apps/login/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- 
 * Copyright 2018 Carlos Eduardo Alfaro Orellana
   https://www.youtube.com/c/CarlosAlfaro007
@@ -7,19 +8,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Login</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/sweetalert2.css">
-	<link rel="stylesheet" href="css/material.min.css">
-	<link rel="stylesheet" href="css/material-design-iconic-font.min.css">
-	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
-	<link rel="stylesheet" href="css/main.css">
+	<title>Home</title>
+	<link rel=" stylesheet" href="{% static 'css/normalize.css' %}">
+	<link rel="stylesheet" href="{% static 'css/sweetalert2.css' %}">
+	<link rel="stylesheet" href="{% static 'css/material.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/material-design-iconic-font.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.css' %}">
+	<link rel="stylesheet" href="{% static 'css/main.css' %}">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/jquery-1.11.2.min.js"><\/script>')</script>
-	<script src="js/material.min.js" ></script>
-	<script src="js/sweetalert2.min.js" ></script>
-	<script src="js/jquery.mCustomScrollbar.concat.min.js" ></script>
-	<script src="js/main.js" ></script>
+	<script src="{% static 'js/material.min.js' %}" ></script>
+	<script src="{% static 'js/sweetalert2.min.js' %}" ></script>
+	<script src="{% static 'js/jquery.mCustomScrollbar.concat.min.js' %}" ></script>
+	<script src="{% static 'js/main.js' %}" ></script>
 </head>
 <body>
 	<div class="login-wrap cover">
