--- a/Apps/login/templates/base.html
+++ b/Apps/login/templates/base.html
@@ -174,8 +174,10 @@
 				<nav class="navBar-options-list">
 					<ul class="list-unstyle">
 						<li class="btn-exit" id="btn-exit">
+							<a href="{%url 'login:loginapp'%}">
 							<i class="zmdi zmdi-power"></i>
-							<div class="mdl-tooltip" for="btn-exit">Cerrar Sesion</div>
+							<div class="mdl-tooltip" >Cerrar Sesion</div>
+						</a>
 						</li>
 						<li class="text-condensedLight noLink" ><small>Usuario</small></li>
 						<li class="noLink">
