--- a/Apps/login/templates/providers.html
+++ b/Apps/login/templates/providers.html
@@ -33,53 +33,56 @@
 						<div class="mdl-tooltip" for="btn-addProvider">Agregar Proveedor</div>
 						</p>
 
-						<form class="form-control sr-only" method="POST">
-							{% csrf_token %}
-							<div class="mdl-grid">
-								<div class="mdl-cell mdl-cell--12-col">
-									<legend class="text-condensedLight"><i class="zmdi zmdi-border-color"></i> &nbsp;
-										DATOS PROVEEDOR</legend><br>
-								</div>
+						<div class="contact-form ">
+							<form method="POST">
 
-								<div class="sr-only mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet mdl-textfield__input">
-									<div class="sr-only mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
-										
-										Nombre {{form.nombre}}
-										
+								{% csrf_token %}
+								<div class="mdl-grid">
+									<div class="mdl-cell mdl-cell--12-col">
+										<legend class="text-condensedLight"><i class="zmdi zmdi-border-color"></i>
+											&nbsp;
+											DATOS PROVEEDOR</legend><br>
 									</div>
-								</div>
 
-								<div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet mdl-textfield__input ">
-									<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
-										Nit {{form.nit}}
-									
+									<div class="mdl-textfield__input">
+										<div class=" mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
+											Nombre {{form.nombre}}
+
+										</div>
 									</div>
-								</div>
 
-								<div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet mdl-textfield__input ">
-									<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-									
-										Dirección {{form.direccion}}
+									<div class="mdl-textfield__input ">
+										<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+											No. Nit {{form.nit}}
+										</div>
 									</div>
-								</div>
 
+									<div class="mdl-textfield__input ">
+										<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 
-								<div class="mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-textfield__input">
-									<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-									
-										Teléfono {{form.telefono}}
+											Dirección {{form.direccion}}
+										</div>
 									</div>
+
+
+									<div class="mdl-textfield__input">
+										<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+
+											Teléfono {{form.telefono}}
+										</div>
+									</div>
+
+
 								</div>
 
+								<p class="text-center">
+									<button class="button55 " style='width:130px; height:45px'
+										type="submit">Guardar</button>
+								</p>
 
-							</div>
 
-							<p class="text-center">
-								<button class="btn btn-primary btn-lg" style='width:130px; height:45px' type="submit" >Guardar</button>
-							</p>
-							
-						</form>
-
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
