--- a/Apps/login/templates/base.html
+++ b/Apps/login/templates/base.html
@@ -146,6 +146,16 @@
 									</div>
 								</a>
 							</li>
+							<li class="full-width">
+								<a href="{%url 'login:cotizacionapp'%}" class="full-width">
+									<div class="navLateral-body-cl">
+										<i class="zmdi zmdi-washing-machine"></i>
+									</div>
+									<div class="navLateral-body-cr">
+										COTIZACIÓN
+									</div>
+								</a>
+							</li>
 						</ul>
 					</li>
 				
