--- a/Apps/login/templates/admin.html
+++ b/Apps/login/templates/admin.html
@@ -20,89 +20,97 @@
 								Nuevo Empleado
 							</div>
 							<div class="full-width panel-content">
-								<form>
+
+
+
+								<p class="text-center">
+									<a href="{% url 'login:crearempleado' %}">
+										<button
+											class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored bg-primary"
+											id="btn-addProvider">
+											<i class="zmdi zmdi-plus"></i>
+										</button>
+									</a>
+								<div class="mdl-tooltip" for="btn-addProvider">Agregar Empleado</div>
+								</p>
+		
+								<div class="contact-form ">
+									<form method="POST">
+										{% csrf_token %}
 									<div class="mdl-grid">
 										<div class="mdl-cell mdl-cell--12-col">
 									        <legend class="text-condensedLight"><i class="zmdi zmdi-border-color"></i> &nbsp; DATOS EMPLEADO</legend><br>
 									    </div>
 
-									    <div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet">
-											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-												<input class="mdl-textfield__input" type="text" pattern="-?[A-Za-záéíóúÁÉÍÓÚ ]*(\.[0-9]+)?" id="NameAdmin">
-												<label class="mdl-textfield__label" for="NameAdmin">Nombre</label>
-											
-											</div>
-									    </div>
-										<div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet">
-											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-												<input class="mdl-textfield__input" type="text" pattern="-?[A-Za-záéíóúÁÉÍÓÚ ]*(\.[0-9]+)?" id="LastNameAdmin">
-												<label class="mdl-textfield__label" for="LastNameAdmin">Apellido</label>
-											
+									    <div class="mdl-textfield__input">
+											<div class=" mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
+												Nombre {{form.nombre}}
+	
 											</div>
 										</div>
-										<div class="mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet">
-											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-												<input class="mdl-textfield__input" type="tel" pattern="-?[0-9+()- ]*(\.[0-9]+)?" id="phoneAdmin">
-												<label class="mdl-textfield__label" for="phoneAdmin">Telefono</label>
-												
-											</div>
+
+										<div class="mdl-textfield__input">
+										<div class=" mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
+											Apellido {{form.apellido}}
+
 										</div>
-										
+									</div>
+
+									<div class="mdl-textfield__input">
+										<div class=" mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
+											Telefono {{form.telefono}}
+
+										</div>
+									</div>
+
 										<div class="mdl-cell mdl-cell--12-col">
 									        <legend class="text-condensedLight"><i class="zmdi zmdi-border-color"></i> &nbsp; DETALLES DE CUENTA</legend><br>
 									    </div>
-										<div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet">
-											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-												<input class="mdl-textfield__input" type="text" pattern="-?[A-Za-z0-9áéíóúÁÉÍÓÚ]*(\.[0-9]+)?" id="UserNameAdmin">
-												<label class="mdl-textfield__label" for="UserNameAdmin">Usuario</label>
-											
-											</div>
+									<div class="mdl-textfield__input">
+										<div class=" mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
+											Usuario {{form.usuario}}
+
 										</div>
-										<div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet">
-											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-												<input class="mdl-textfield__input" type="password" id="passwordAdmin">
-												<label class="mdl-textfield__label" for="passwordAdmin">Contraseña</label>
-											
-											</div>
+									</div>
+									<div class="mdl-textfield__input">
+										<div class=" mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
+											Contraseña {{form.contrasenia}}
+
 										</div>
+									</div>
 										
 										<div class="mdl-cell mdl-cell--12-col">
 									        <legend class="text-condensedLight"><i class="zmdi zmdi-border-color"></i> &nbsp; Tipo de Empleado</legend><br>
 									    </div>
-										<div class="mdl-cell mdl-cell--12-col">
-											<div class="mdl-textfield mdl-js-textfield">
-												<select class="mdl-textfield__input">
-													<option value="" disabled="" selected="">Seleccionar tipo</option>
-													<option value="">Administrador</option>
-													<option value="">Vendedor</option>
-												
-												</select>
+										<div class="mdl-textfield__input">
+											<div class=" mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
+												Tipo Empleado {{form.tipo}}
+	
 											</div>
-									    </div>
+										</div>
 										
-										<div class="mdl-cell mdl-cell--12-col">
-											<div class="mdl-textfield mdl-js-textfield">
-												<select class="mdl-textfield__input">
-													<option value="" disabled="" selected="">Seleccionar disponibilidad</option>
-													<option value="">Activo</option>
-													<option value="">Inactivo</option>
-												
-												</select>
+										<div class="mdl-textfield__input">
+											<div class=" mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
+											    Disponibilidad {{form.disponibilidad}}
+	
 											</div>
-									    </div>
+										</div>
+
 									</div>
+
 									<p class="text-center">
-										<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored bg-primary" id="btn-addAdmin">
-											<i class="zmdi zmdi-plus"></i>
-										</button>
-										<div class="mdl-tooltip" for="btn-addAdmin">Add Administrator</div>
+										<button class="button55 " style='width:130px; height:45px'
+											type="submit">Guardar</button>
 									</p>
+
 								</form>
+							</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+
 			<div class="mdl-tabs__panel" id="tabListAdmin">
 				<div class="mdl-grid">
 					<div class="mdl-cell mdl-cell--4-col-phone mdl-cell--8-col-tablet mdl-cell--8-col-desktop mdl-cell--2-offset-desktop">
