--- a/Apps/login/templates/base.html
+++ b/Apps/login/templates/base.html
@@ -185,7 +185,7 @@
 				<nav class="navBar-options-list">
 					<ul class="list-unstyle">
 						<li class="btn-exit" id="btn-exit">
-							<a href="{%url 'login:loginapp'%}">
+							<a href="{%url 'login:logoutapp'%}">
 							<i class="zmdi zmdi-power"></i>
 							<div class="mdl-tooltip" >Cerrar Sesion</div>
 						</a>
