--- a/Apps/login/templates/index.html
+++ b/Apps/login/templates/index.html
@@ -29,13 +29,14 @@
 				<i class="zmdi zmdi-account-circle"></i>
 			</p>
 			<p class="text-center text-condensedLight">CompuAcces</p>
-			<form action="{%url 'login:homeapp'%}">
+			<form action="" method="POST">
+				{% csrf_token %}
 				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				    <input class="mdl-textfield__input" type="text" id="userName">
+				    <input class="mdl-textfield__input" type="text" name="username" type="submit">
 				    <label class="mdl-textfield__label" for="userName">Usuario</label>
 				</div>
 				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				    <input class="mdl-textfield__input" type="password" id="pass">
+				    <input class="mdl-textfield__input" type="password" name="password" type="submit">
 				    <label class="mdl-textfield__label" for="pass">Contraseña</label>
 				</div>
 				<button class="mdl-button mdl-js-button mdl-js-ripple-effect" style="color: #3F51B5; margin: 0 auto; display: block;">
