--- a/Apps/cliente/templates/client.html
+++ b/Apps/cliente/templates/client.html
@@ -32,6 +32,7 @@
 
 
 							<div class="card card-body" style="overflow:scroll">
+
 								<div class="col-md-3 pb-2">
 									<a href="#AgregarPersonalModal" data-toggle="modal" data-dismiss="modal">
 										<button type="button" class="btn btn-success">
@@ -40,6 +41,30 @@
 										</button>
 									</a>
 								</div>
+
+						
+
+								{% block buscador %}
+								<form
+									class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
+									method="GET">
+
+									{% csrf_token %}
+									<div class="input-group">
+										<input type="text" class="form-control bg-light border-0 small"
+											placeholder="Buscar..." name="buscar" value="{{ request.GET.buscar }}">
+										<div class="input-group-append">
+											<button class="btn btn-primary" type="submit">
+												<i class="fas fa-search fa-sm"></i>
+											</button>
+										</div>
+									</div>
+								</form>
+								{% endblock buscador %}
+
+								<br>
+							
+
 								<table class="table table-hover table-primary" id="myTable">
 									<thead>
 										<tr>
@@ -150,7 +175,5 @@
 		</div>
 	</div>
 </div>
-
-
 
 {% endblock %}
