--- a/Apps/administracion/templates/providers.html
+++ b/Apps/administracion/templates/providers.html
@@ -4,7 +4,6 @@
 {% block contenido %}
 
 <link rel="stylesheet" href="{% static 'css/b4.css' %}">
-<link rel="stylesheet" href="{% static 'css/barrabusqueda.css' %}">
 <script src="{% static 'js/b4.js' %}"></script>
 <script src="{% static 'js/main4.js' %}"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
@@ -12,10 +11,15 @@
 	crossorigin="anonymous"></script>
 
 <section class="full-width header-well">
-	<div class="full-width header-well-icon">
-		<i class="zmdi zmdi-accounts"></i>
-	</div>
-
+	<article class="full-width tile">
+		<div class="tile-text">
+			<span class="text-condensedLight">
+				{{proveedores_count}}<br>
+				<small>Total de proveedores</small>
+			</span>
+		</div>
+		<i class="zmdi zmdi-account tile-icon"></i>
+	</article>
 </section>
 <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
 
@@ -43,7 +47,6 @@
 								</div>
 
 								{% block buscador %}
-								<diV class="barra">
 								<form
 									class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
 									method="GET">
@@ -59,7 +62,6 @@
 										</div>
 									</div>
 								</form>
-							</diV>
 								{% endblock buscador %}
 
 								<br>
