Renderizado de cotizaciones

--- a/Apps/login/templates/base.html
+++ b/Apps/login/templates/base.html
@@ -163,7 +163,7 @@ https://www.youtube.com/c/CarlosAlfaro007
 								</a>
 							</li>
 							<li class="full-width">
-								<a href="" class="full-width">
+								<a href="{%url 'ventas:crearCotizacion'%}" class="full-width">
 									<div class="navLateral-body-cl">
 										<i class="zmdi zmdi-washing-machine"></i>
 									</div>
