--- a/Apps/ventas/templates/cotizacion.html
+++ b/Apps/ventas/templates/cotizacion.html
@@ -20,7 +20,7 @@
 					<div class="full-width panel-content">
 
 						<p class="text-center">
-							<a href="{% url 'login:crearcotizacion' %}">
+							<a href="{% url 'ventas:crearCotizacion' %}">
 								<button
 									class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored bg-primary"
 									id="btn-addProvider">
