Realizar compra terminado

--- a/Apps/login/templates/base.html
+++ b/Apps/login/templates/base.html
@@ -153,7 +153,7 @@ https://www.youtube.com/c/CarlosAlfaro007
 								</a>
 							</li>
 							<li class="full-width">
-								<a href="{%url 'ventas:cart'%}" class="full-width">
+								<a href="{%url 'ventas:sales'%}" class="full-width">
 									<div class="navLateral-body-cl">
 										<i class="zmdi zmdi-washing-machine"></i>
 									</div>
