--- a/Apps/ventas/templates/ventas.html
+++ b/Apps/ventas/templates/ventas.html
@@ -63,7 +63,7 @@
 					</div>
 
 					<div class="mt-2">
-						<a href="#" class="btn btn-warning">Realizar venta</a>
+						<a href="{%url 'ventas:complete'%}" class="btn btn-warning">Realizar venta</a>
 					</div>
 
 				</div>
